--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,19 @@
 h1 {
 	margin:-9px;
-	font-size: 1.3em;
+	font-size:1.3em;
 }
 
-h2 {
+h2, p {
 	margin:15px;
 }
 
-#header-nav {
+hr, #header-nav {
 	margin:0;
 }
 
 .navbar-brand {
-	font-size: 1.8em;
-	font-weight: bold;
+	font-size:1.8em;
+	font-weight:bold;
 }
 
 #collapsable-nav {
@@ -22,9 +22,8 @@ h2 {
 
 .mainSection {
 	background-color:#ccc;
-	/*height:999px;*/
 }
 
 .sectionHeader {
-	font-size: 1.8em;
+	font-size:1.8em;
 }
