--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ hr, #header-nav {
 .mainSection {
 	background-color:#ccc;
 	margin-bottom:9px;
-	height:999px;
+	min-height:999px;
 }
 
 .sectionHeader {
